force-app/main/default/objects/Metadata_Item_Vlocity__c/Metadata_Item_Vlocity__c.object-meta.xml
<CustomObject>
    <label>Metadata Item Vlocity</label>
    <nameField>
        <displayFormat>MV-{0000}</displayFormat>
        <label>Metadata Item Vlocity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items Vlocity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>