force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_ID__c</fullName>
    <label>Attachment ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>