force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <type>TextArea</type>
</CustomField>