force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/CRC32__c.field-meta.xml
<CustomField>
    <fullName>CRC32__c</fullName>
    <label>CRC32</label>
    <type>TextArea</type>
</CustomField>