force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Component Key</label>
    <type>TextArea</type>
</CustomField>