force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <label>Changed By</label>
    <type>TextArea</type>
</CustomField>