force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <label>Snapshot Vlocity</label>
    <referenceTo>Snapshot_Vlocity__c</referenceTo>
    <relationshipLabel>Metadata Items Vlocity</relationshipLabel>
    <relationshipName>Snapshot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>