force-app/main/default/objects/Metadata_Item_Vlocity__c/fields/Sub_Items__c.field-meta.xml
<CustomField>
    <fullName>Sub_Items__c</fullName>
    <label>Sub Items</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>