force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/Attachment.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Attachment</fullName>
    <label>Attachment</label>
</RecordType>