force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/AttributeAssignmentRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AttributeAssignmentRule</fullName>
    <label>AttributeAssignmentRule</label>
</RecordType>