force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/AttributeCategory.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>AttributeCategory</fullName>
    <label>AttributeCategory</label>
</RecordType>