force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CalculationMatrix.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CalculationMatrix</fullName>
    <label>CalculationMatrix</label>
</RecordType>