force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CalculationMatrixVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CalculationMatrixVersion</fullName>
    <label>CalculationMatrixVersion</label>
</RecordType>