force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CalculationProcedure.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CalculationProcedure</fullName>
    <label>CalculationProcedure</label>
</RecordType>