force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CalculationProcedureVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CalculationProcedureVersion</fullName>
    <label>CalculationProcedureVersion</label>
</RecordType>