force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/Catalog.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Catalog</fullName>
    <label>Catalog</label>
</RecordType>