force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ChargeMeasurement.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ChargeMeasurement</fullName>
    <label>ChargeMeasurement</label>
</RecordType>