force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ContentVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContentVersion</fullName>
    <label>ContentVersion</label>
</RecordType>