force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ContextAction.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContextAction</fullName>
    <label>ContextAction</label>
</RecordType>