force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ContextDimension.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContextDimension</fullName>
    <label>ContextDimension</label>
</RecordType>