force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ContextScope.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ContextScope</fullName>
    <label>ContextScope</label>
</RecordType>