force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CpqConfigurationSetup.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CpqConfigurationSetup</fullName>
    <label>CpqConfigurationSetup</label>
</RecordType>