force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CustomFieldMap.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomFieldMap</fullName>
    <label>CustomFieldMap</label>
</RecordType>