force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/CustomObjectMap.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>CustomObjectMap</fullName>
    <label>CustomObjectMap</label>
</RecordType>