force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/DataRaptor.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DataRaptor</fullName>
    <label>DataRaptor</label>
</RecordType>