force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/DecisionMatrix.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DecisionMatrix</fullName>
    <label>DecisionMatrix</label>
</RecordType>