force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/DecisionMatrixVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DecisionMatrixVersion</fullName>
    <label>DecisionMatrixVersion</label>
</RecordType>