force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/DocumentClause.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DocumentClause</fullName>
    <label>DocumentClause</label>
</RecordType>