force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/DocumentTemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DocumentTemplate</fullName>
    <label>DocumentTemplate</label>
</RecordType>