force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/DocumentTemplates.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>DocumentTemplates</fullName>
    <label>DocumentTemplates</label>
</RecordType>