force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/EntityFilter.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>EntityFilter</fullName>
    <label>EntityFilter</label>
</RecordType>