force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ExpressionSet.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ExpressionSet</fullName>
    <label>ExpressionSet</label>
</RecordType>