force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ExpressionSetVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ExpressionSetVersion</fullName>
    <label>ExpressionSetVersion</label>
</RecordType>