force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/FlexCard.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>FlexCard</fullName>
    <label>FlexCard</label>
</RecordType>