force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/GeneralSettings.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>GeneralSettings</fullName>
    <label>GeneralSettings</label>
</RecordType>