force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/IntegrationProcedure.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>IntegrationProcedure</fullName>
    <label>IntegrationProcedure</label>
</RecordType>