force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/IntegrationProcedureVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>IntegrationProcedureVersion</fullName>
    <label>IntegrationProcedureVersion</label>
</RecordType>