force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/IntegrationRetryPolicy.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>IntegrationRetryPolicy</fullName>
    <label>IntegrationRetryPolicy</label>
</RecordType>