force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/InterfaceImplementation.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>InterfaceImplementation</fullName>
    <label>InterfaceImplementation</label>
</RecordType>