force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ItemImplementation.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ItemImplementation</fullName>
    <label>ItemImplementation</label>
</RecordType>