force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ManualQueue.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ManualQueue</fullName>
    <label>ManualQueue</label>
</RecordType>