force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ObjectClass.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ObjectClass</fullName>
    <label>ObjectClass</label>
</RecordType>