force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ObjectContextRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ObjectContextRule</fullName>
    <label>ObjectContextRule</label>
</RecordType>