force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ObjectLayout.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ObjectLayout</fullName>
    <label>ObjectLayout</label>
</RecordType>