force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OfferingOfferingProcedureProcedure.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OfferingOfferingProcedureProcedure</fullName>
    <label>OfferingProcedure</label>
</RecordType>