force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OfferMigrationPlan.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OfferMigrationPlan</fullName>
    <label>OfferMigrationPlan</label>
</RecordType>