force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OmniScriptVersion.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OmniScriptVersion</fullName>
    <label>OmniScriptVersion</label>
</RecordType>