force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OrchestrationDependencyDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OrchestrationDependencyDefinition</fullName>
    <label>OrchestrationDependencyDefinition</label>
</RecordType>