force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OrchestrationItemDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OrchestrationItemDefinition</fullName>
    <label>OrchestrationItemDefinition</label>
</RecordType>