force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OrchestrationPlanDefinition.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OrchestrationPlanDefinition</fullName>
    <label>OrchestrationPlanDefinition</label>
</RecordType>