force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/OrchestrationQueueAssignmentRule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>OrchestrationQueueAssignmentRule</fullName>
    <label>OrchestrationQueueAssignmentRule</label>
</RecordType>