force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/Pricebook2.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Pricebook2</fullName>
    <label>Pricebook2</label>
</RecordType>