force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/PriceList.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>PriceList</fullName>
    <label>PriceList</label>
</RecordType>