force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/PricingPlan.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>PricingPlan</fullName>
    <label>PricingPlan</label>
</RecordType>