force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/PricingVariable.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>PricingVariable</fullName>
    <label>PricingVariable</label>
</RecordType>