force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/Product2.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Product2</fullName>
    <label>Product2</label>
</RecordType>