force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/QueryBuilder.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>QueryBuilder</fullName>
    <label>QueryBuilder</label>
</RecordType>