force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/RateBand.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>RateBand</fullName>
    <label>RateBand</label>
</RecordType>