force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/RelationshipGraph.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>RelationshipGraph</fullName>
    <label>RelationshipGraph</label>
</RecordType>