force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/Rule.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Rule</fullName>
    <label>Rule</label>
</RecordType>