force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/SpecTemplateMapping.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>SpecTemplateMapping</fullName>
    <label>SpecTemplateMapping</label>
</RecordType>