force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/StoryObjectConfiguration.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>StoryObjectConfiguration</fullName>
    <label>StoryObjectConfiguration</label>
</RecordType>