force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/String.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>String</fullName>
    <label>String</label>
</RecordType>