force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/System.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>System</fullName>
    <label>System</label>
</RecordType>