force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/ThorOrchestrationQueue.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>ThorOrchestrationQueue</fullName>
    <label>ThorOrchestrationQueue</label>
</RecordType>