force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/TimePlan.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>TimePlan</fullName>
    <label>TimePlan</label>
</RecordType>