force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/TimePolicy.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>TimePolicy</fullName>
    <label>TimePolicy</label>
</RecordType>