force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/UIFacet.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>UIFacet</fullName>
    <label>UIFacet</label>
</RecordType>