force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/UISection.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>UISection</fullName>
    <label>UISection</label>
</RecordType>