force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityAction.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityAction</fullName>
    <label>VlocityAction</label>
</RecordType>