force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityAttachment.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityAttachment</fullName>
    <label>VlocityAttachment</label>
</RecordType>