force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityCard.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityCard</fullName>
    <label>VlocityCard</label>
</RecordType>