force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityDataStore.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityDataStore</fullName>
    <label>VlocityDataStore</label>
</RecordType>