force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityFunction.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityFunction</fullName>
    <label>VlocityFunction</label>
</RecordType>