force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityPicklist.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityPicklist</fullName>
    <label>VlocityPicklist</label>
</RecordType>