force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityScheduledJob.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityScheduledJob</fullName>
    <label>VlocityScheduledJob</label>
</RecordType>