force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocitySearchWidgetSetup.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocitySearchWidgetSetup</fullName>
    <label>VlocitySearchWidgetSetup</label>
</RecordType>