force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityStateModel.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityStateModel</fullName>
    <label>VlocityStateModel</label>
</RecordType>