force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityTrackingGroup.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityTrackingGroup</fullName>
    <label>VlocityTrackingGroup</label>
</RecordType>