force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityUILayout.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityUILayout</fullName>
    <label>VlocityUILayout</label>
</RecordType>