force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityUITemplate.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityUITemplate</fullName>
    <label>VlocityUITemplate</label>
</RecordType>