force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VlocityWebTrackingConfiguration.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VlocityWebTrackingConfiguration</fullName>
    <label>VlocityWebTrackingConfiguration</label>
</RecordType>