force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VqMachine.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VqMachine</fullName>
    <label>VqMachine</label>
</RecordType>