force-app/main/default/objects/Metadata_Item_Vlocity__c/recordTypes/VqResource.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>VqResource</fullName>
    <label>VqResource</label>
</RecordType>